--- a/app/views/7-0/manual-search-results.html
+++ b/app/views/7-0/manual-search-results.html
@@ -40,7 +40,7 @@ GOV.UK Manual
                         {{myData.search["count"]}} results found in
                         {% endif %}
                     </strong><br>
-                    {{_thisManual.title|safe}} {{_thisManual.date|safe}}<br>
+                    {{_thisManual.title|safe}}<br>
                     <a href="http://www.gov.uk/search?q={{myData.searchTerm}}">Display results from all of GOV.UK</a>
                 </div>
                 <ol class="results-list" id="js-live-search-results" start="1" data-search-query="test"
