--- a/app/views/7-0/rules-list.html
+++ b/app/views/7-0/rules-list.html
@@ -296,7 +296,7 @@
                   {% endif %}
                 {% endif %}
                 {% set _providerManualContent = myData.manuals[_providerManual].content %}
-                {% set _providerManualTitle = _providerManualContent.title|safe + " - " + _providerManualContent.date|safe + " (" + _providerManualContent.version|safe|lower + ")" %}
+                {% set _providerManualTitle = _providerManualContent.title|safe + " - " + _providerManualContent.date|safe %}
                 
                 <section class="attachment embedded" id="attachment_2875833">
                   <div class="attachment-thumb">
@@ -347,7 +347,7 @@
                     <div class="attachment-details">
                       <h2 class="title">
                         <a href="#">
-                          PDF: Apprenticeship performance-management rules for training providers - August 2018 to July 2019 (version 1)
+                          PDF: Apprenticeship performance-management rules for training providers - August 2018 to July 2019
                         </a></h2>
                       <p class="metadata">
                         <span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">633KB</span>,
@@ -382,7 +382,7 @@
                   {% endif %}
                 {% endif %}
                 {% set _employerManualContent = myData.manuals[_employerManual].content %}
-                {% set _employerManualTitle = _employerManualContent.title|safe + " - " + _employerManualContent.date|safe + " (" + _employerManualContent.version|safe|lower + ")" %}
+                {% set _employerManualTitle = _employerManualContent.title|safe + " - " + _employerManualContent.date|safe %}
 
                 <section class="attachment embedded" id="attachment_2875831">
                   <div class="attachment-thumb">
@@ -437,7 +437,7 @@
                   <div class="attachment-details">
                     <h2 class="title">
                       <a href="#">
-                        PDF: Apprenticeship funding rules for employer-providers - August 2018 to July 2019 (version 1)
+                        PDF: Apprenticeship funding rules for employer-providers - August 2018 to July 2019
                       </a>
                     </h2>
                     <p class="metadata">
