--- a/app/views/7-0/manual-page.html
+++ b/app/views/7-0/manual-page.html
@@ -62,7 +62,7 @@
     {% if myData.header == "altered" %}
         {% include "../includes/manual-header-2.html" %}
     {% else %}
-        {% set _manualHeaderTitle = _thisManual.title|safe + " - " + _thisManual.date|safe %}
+        {% set _manualHeaderTitle = _thisManual.title|safe %}
         {% include "../includes/manual-header.html" %}
     {% endif %}
       
