--- a/app/views/7-0/manual-updates.html
+++ b/app/views/7-0/manual-updates.html
@@ -14,7 +14,7 @@ GOV.UK Manual
     {% if myData.header == "altered" %}
         {% include "../includes/manual-header-2.html" %}
     {% else %}
-        {% set _manualHeaderTitle = _thisManual.title|safe + " - " + _thisManual.date|safe  %}
+        {% set _manualHeaderTitle = _thisManual.title|safe  %}
         {% include "../includes/manual-header.html" %}
     {% endif %}
 
