--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,6 +20,8 @@
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
                     <li><span class="govuk-!-font-weight-bold">updates page</span> - divided updates over two dates, sub section labels are links</li>
                     <li><span class="govuk-!-font-weight-bold">updates (within sections)</span> - always visible option, latest updates listed under each sub-section heading</li>
+                    <li><span class="govuk-!-font-weight-bold">years</span> - link to other years of rules added</li>
+                    <li><span class="govuk-!-font-weight-bold">years hub</span> - added</li>
                 </ul>
             </li>
             <li>
