--- a/app/views/7-0/rules-years.html
+++ b/app/views/7-0/rules-years.html
@@ -277,13 +277,20 @@
                                 <p class="govuk-body">The 2018 to 2019 rules apply to apprenticeships starting on or after 1 August 2018.</p>
 
                                 <p class="govuk-body">You can view the apprenticeship funding rules for:</p>
-                                <ul class="govuk-list " style="font-weight: bold">
+                                <ul class="govuk-list " >
                                     <li><a href="manual-home?manual={{_providerManual}}">training providers</a></li>
                                     <li><a href="manual-home?manual={{_employerManual}}">employers</a></li>
                                     <li><a href="#">employer-providers</a></li>
                                 </ul>
 
-                                <details class="govuk-details">
+                                <h3 class="gem-c-heading  gem-c-heading--mobile-top-margin" id="other">
+                                       Other information
+                                    </h3>
+
+                                <p>You can <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/733046/Apps_1819_PM_rules_.pdf">download apprenticeship performance management rules for training providers (PDF, 633KB)</a>.</p>
+<hr>
+
+                                <!-- <details class="govuk-details">
                                     <summary class="govuk-details__summary">
                                         <span class="govuk-details__summary-text">
                                                 Download the funding and performance management rules in a different format
@@ -296,7 +303,7 @@
                                         <p><a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/733034/1819_Employer_Rules_v1.0.pdf">Apprenticeship funding rules for employers (PDF, 1.33MB)</a></p>
                                         <p><a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/733056/1819_Employer-Provider_Rules_v1.0.pdf">Apprenticeship funding rules for employer-providers (PDF, 2.56MB)</a></p>
                                     </div>
-                                </details>
+                                </details> -->
 
                                 <h3 class="gem-c-heading  gem-c-heading--mobile-top-margin" id="2017">
                                     2017 to 2018 rules
@@ -309,7 +316,7 @@
                                 <p class="govuk-body">For apprenticeships that started between 1 August 2016 and 31 July 2017, you must follow the <a href="https://www.gov.uk/government/collections/sfa-funding-rules-2016-to-2017">2016 to 2017 funding rules</a>.</p>
 
                                 <h3 class="gem-c-heading  gem-c-heading--mobile-top-margin" id="previous">Previous rules</h3>
-                                <p class="govuk-body">For apprenticeships that started before 1 August 2016, <a href="https://www.gov.uk/guidance/sfa-funding-rules">view the ESFA funding rules</a>.</p>
+                                <p class="govuk-body">For apprenticeships that started before 1 August 2016, <a href="https://www.gov.uk/guidance/sfa-funding-rules">view previous funding rules</a>.</p>
 
                             </div>
                         </div>
