update comment added

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -22,6 +22,7 @@
                     <li><span class="govuk-!-font-weight-bold">updates (within sections)</span> - always visible option, latest updates listed under each sub-section heading</li>
                     <li><span class="govuk-!-font-weight-bold">years</span> - link to other years of rules added</li>
                     <li><span class="govuk-!-font-weight-bold">years hub</span> - added</li>
+                    <li><span class="govuk-!-font-weight-bold">pdf link</span> - moved from collections page to direct link on manual</li>
                 </ul>
             </li>
             <li>
