--- a/app/views/includes/manual-data-notes.html
+++ b/app/views/includes/manual-data-notes.html
@@ -1,6 +1,12 @@
 <h2 class="govuk-heading-m">Manual main content</h2>
 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
     <li>
+        <span class="govuk-!-font-weight-bold">Employer-providers - 1</span>
+        <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
+            <li>chapter names and summaries added only</li>
+        </ul>
+    </li>
+    <li>
         <span class="govuk-!-font-weight-bold">Employers - 2</span>
         <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
             <li>section snippets added</li>
