--- a/app/views/index.html
+++ b/app/views/index.html
@@ -23,6 +23,8 @@
                     <li><span class="govuk-!-font-weight-bold">years</span> - link to other years of rules added</li>
                     <li><span class="govuk-!-font-weight-bold">years hub</span> - added</li>
                     <li><span class="govuk-!-font-weight-bold">pdf link</span> - moved from collections page to direct link on manual</li>
+                    <li><span class="govuk-!-font-weight-bold">section titles</span> - rule ranges added in brackets</li>
+                    <li><span class="govuk-!-font-weight-bold">section summaries</span> - updated</li>
                 </ul>
             </li>
             <li>
