--- a/app/views/7-0/manual-page.html
+++ b/app/views/7-0/manual-page.html
@@ -68,14 +68,14 @@
       
     <ol class="breadcrumb-trail">
         <li><a href="manual-home?manual={{myData.manual}}&updatesFilterOn=false">Contents</a></li>
-        <li class="last-child">{{section.title|safe}}</li>
+        <li class="last-child">{{section.title|safe}}{% if section.range %} ({{section.range|safe}}){% endif %}</li>
     </ol>
       
     <article aria-labelledby="manual-title" id="content">
         <div class="manual-body">
             <article aria-labelledby="section-title">
                 <h1 id="section-title" class="section-title {% if section.summary %}section-title-with-summary{% endif %}">
-                    {{section.title|safe}}
+                    {{section.title|safe}}{% if section.range %} ({{section.range|safe}}){% endif %}
                 </h1>
                 {% if section.summary %}
                 <p class="summary">
@@ -143,7 +143,6 @@
                     <div class="updates govuk-grid-row">
                         <div class="govuk-grid-column-two-thirds" >
                             <div class=" updates call-to-action" style="margin-top:1em">
-                                <!-- <p class="govuk-body  govuk-!-font-weight-bold">{{section.title|safe}}</p> -->
                                 {% for update in section["updates-section"] %}
                                     <strong class="govuk-tag" style="margin-right: 5px; background: #005ea5">
                                         {{update.type or "edited"}} in 2018
@@ -467,7 +466,6 @@
                 <!-- Footnotes -->
                 {% if section.footnotes|length > 0 %}
                 <div class="govuk-!-margin-top-9">
-                    <!-- <h3 class="govuk-heading-s">Footnotes: {{section.title|safe}}</h3> -->
                     <p class="govuk-body-s">Footnotes</p>
                     <ul class="govuk-list govuk-list--bullet govuk-body-s">
                     {% for footnote in section.footnotes %}
