--- a/app/views/7-0/rules-years.html
+++ b/app/views/7-0/rules-years.html
@@ -318,7 +318,7 @@
                                 <h3 class="gem-c-heading  gem-c-heading--mobile-top-margin" id="2016">
                                     2016 to 2017 rules
                                 </h3>
-                                <p class="govuk-body">For apprenticeships that started between 1 August 2016 and 31 July 2017, you must follow the <a href="rules-list?yearRangeStart=2016&yearRangeEnd=2017">2016 to 2017 funding rules</a>.</p>
+                                <p class="govuk-body">For apprenticeships that started between 1 August 2016 and 31 July 2017, you must follow the <a href="https://www.gov.uk/government/collections/sfa-funding-rules-2016-to-2017">2016 to 2017 funding rules</a>.</p>
 
                                 <h3 class="gem-c-heading  gem-c-heading--mobile-top-margin" id="previous">Previous rules</h3>
                                 <p class="govuk-body">For apprenticeships that started before 1 August 2016, <a href="https://www.gov.uk/guidance/sfa-funding-rules">view previous funding rules</a>.</p>
