summary of changes and details added

--- a/app/views/7-0/rules-list.html
+++ b/app/views/7-0/rules-list.html
@@ -211,12 +211,6 @@
         </div>
         <div class="column-two-thirds">
 
-            <!-- <div class="call-to-action">
-                <p style="font-size: 18px; font-weight: bold; margin-bottom: 15px">These are rules for apprenticeships that started between 1 August 2017 and 31 July 2018.</p>
-                <p style="font-size: 18px; margin-bottom: 15px">There are different funding rules for different apprenticeship start dates. You must follow the funding rules that apply to each apprentice.</p>
-                <p style="font-size: 18px;">For apprenticeships that did not start between 1 August 2017 and 31 July 2018, <a href="rules-years">view other funding rules</a>.</p>
-            </div> -->
-
           <p class="gem-c-lead-paragraph ">
               These rules are for apprenticeships that started between 1 August {{_yearRangeStart}} and 31 July {{_yearRangeEnd}}. 
           </p>
@@ -363,6 +357,51 @@
                       </div>
                   </section>
 
+                  <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin  " id="documents-title">
+                      Summary of changes
+                    </h2>
+
+                  <section class="attachment embedded" id="attachment_2701269">
+                      <div class="attachment-thumb">
+                          <a aria-hidden="true" class="thumbnail" href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/697128/Summary_of_changes.pdf"><img alt="" src="/public/images/thumbnail_1819_Employer_Rules_v1.0.png"></a>
+                      </div>
+                      <div class="attachment-details">
+                        <h2 class="title"><a aria-describedby="attachment-2701269-accessibility-help" href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/697128/Summary_of_changes.pdf">Apprenticeship funding rules summary of changes - {{_yearRangeStart}} to {{_yearRangeEnd}}</a></h2>
+                        <p class="metadata">
+                            <span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">111KB</span>, <span class="page-length">8 pages</span>
+                        </p>
+                    
+                    
+                          <div data-module="toggle" class="accessibility-warning" id="attachment-2701269-accessibility-help">
+                            <h2>This file may not be suitable for users of assistive technology.
+                              <a class="toggler" href="#attachment-2701269-accessibility-request" data-controls="attachment-2701269-accessibility-request" data-expanded="false" role="button" aria-controls="attachment-2701269-accessibility-request" aria-expanded="false">Request an accessible format.</a>
+                            </h2>
+                            <p id="attachment-2701269-accessibility-request" class="js-hidden" aria-live="polite" role="region">
+                              If you use assistive technology (such as a screen reader) and need a
+                    version of this document in a more accessible format, please email <a href="#">info@sfa.bis.gov.uk</a>.
+                    Please tell us what format you need. It will help us if you say what assistive technology you use.
+                    
+                            </p>
+                          </div>
+                      </div>
+                    </section>
+
+                <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin  " id="documents-title">
+                  Details
+                </h2>
+                <p>These documents set out the funding rules for employers, employer-providers and training providers. The funding rules
+                  cover the period August {{_yearRangeStart}} to July {{_yearRangeEnd}} and apply to all apprenticeship programmes
+                  starting on or after 1 August {{_yearRangeStart}}. This includes both apprenticeship frameworks and standards.</p>
+
+                <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin  " id="documents-title">
+                  Help and support
+                </h2>
+                <p>Training providers can contact us through our business operations service desk at <a
+                    href="mailto:SDE.servicedesk@education.gov.uk">SDE.servicedesk@education.gov.uk</a> or telephone 0370 267 0001. You
+                  can also contact your provider management manager/adviser.</p>
+
+                <p>Employers requiring further support can contact us through our apprenticeship business support team on 0800 015 0600.
+                </p>
 
               </div>
             </div>
@@ -377,17 +416,17 @@
             <div class="app-c-published-dates__change-history js-hidden" id="full-history">
               <ol>
                 <li class="app-c-published-dates__change-item">
-                  <time class="app-c-published-dates__change-date timestamp" datetime="2018-08-09T13:58:07.000+01:00">9
+                  <time class="app-c-published-dates__change-date timestamp" >9
                     August {{_yearRangeStart}}</time>
                   We have published the apprenticeships performance-management rules for August {{_yearRangeStart}} to March {{_yearRangeEnd}}.
                 </li>
                 <li class="app-c-published-dates__change-item">
-                  <time class="app-c-published-dates__change-date timestamp" datetime="2018-07-31T18:34:40.000+01:00">31
+                  <time class="app-c-published-dates__change-date timestamp" >31
                     July {{_yearRangeStart}}</time>
                   We have published updated {{_yearRangeStart}} to {{_yearRangeEnd}} apprenticeship funding rules.
                 </li>
                 <li class="app-c-published-dates__change-item">
-                  <time class="app-c-published-dates__change-date timestamp" datetime="2018-06-19T16:37:00.000+01:00">19
+                  <time class="app-c-published-dates__change-date timestamp" >19
                     June {{_yearRangeStart}}</time>
                   First published.
                 </li>
