CCW-558 links to feedback and survey

--- a/app/views/7-0/manual-home.html
+++ b/app/views/7-0/manual-home.html
@@ -216,6 +216,14 @@
                     </a>
                 </li>
                 {% endfor %}
+                <li class="section-contains-no-updates">
+                    <a class="" href="manual-page?manual={{myData.manual}}&manualpage=feedback&updatesFilterOn=false">
+                        <span class="subsection-title-text">Feedback</span>
+                        <span class="subsection-summary">
+                            How to send the Education and Skills Funding Agency (ESFA) comments and suggestions about this manual.
+                        </span>
+                    </a>
+                </li>
             </ol>
             
         </div>
