--- a/app/views/7-0/rules-list.html
+++ b/app/views/7-0/rules-list.html
@@ -171,6 +171,15 @@
 
   <div id="wrapper" class="direction-ltr">
 
+      <div class="full-page-width-wrapper">     
+          <div class="gem-c-phase-banner govuk-phase-banner">
+              <p class="govuk-phase-banner__content">
+                  <strong class="govuk-tag govuk-phase-banner__content__tag" style="margin-right: 10px">beta</strong>
+                  <span class="govuk-phase-banner__text">Complete our quick 5-question survey to <a target="_blank" href="#">help us improve our content</a>.</span>
+              </p>
+          </div>
+      </div>
+
     <div class="gem-c-contextual-breadcrumbs">
       <!-- Rendering taxonomy breadcrumbs because the page is tagged to live taxons -->
       <div class="gem-c-breadcrumbs govuk-breadcrumbs " data-module="track-click">
