--- a/app/views/7-0/rules-years.html
+++ b/app/views/7-0/rules-years.html
@@ -63,6 +63,7 @@
 
 <body class='indexLinks'>
     <script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
+    
     <div id="skiplink-container">
         <div>
             <a href="#content" class="skiplink">Skip to main content</a>
@@ -90,6 +91,7 @@
 
             </div>
 
+           
             <div class="header-proposition">
                 <div class="content">
                     <a href="#proposition-links" class="js-header-toggle menu">Menu</a>
@@ -145,6 +147,15 @@
     <div id="global-header-bar"></div>
 
     <div id="wrapper" class="direction-ltr">
+
+        <div class="full-page-width-wrapper">     
+            <div class="gem-c-phase-banner govuk-phase-banner">
+                <p class="govuk-phase-banner__content">
+                    <strong class="govuk-tag govuk-phase-banner__content__tag" style="margin-right: 10px">beta</strong>
+                    <span class="govuk-phase-banner__text">Complete our quick 5-question survey to <a target="_blank" href="#">help us improve our content</a>.</span>
+                </p>
+            </div>
+        </div>
 
         <div class="gem-c-contextual-breadcrumbs">
             <!-- Rendering taxonomy breadcrumbs because the page is tagged to live taxons -->
