--- a/app/views/includes/manual-header-2.html
+++ b/app/views/includes/manual-header-2.html
@@ -1,27 +1,29 @@
-<div class="gem-c-contextual-breadcrumbs" style="margin-top:-20px">
-    <div class="gem-c-breadcrumbs govuk-breadcrumbs" >
-        <ol class="govuk-breadcrumbs__list">
-            <li class="govuk-breadcrumbs__list-item" aria-current="false">
-                <a class="govuk-breadcrumbs__link" aria-current="false" href="https://www.gov.uk">Home</a>
-            </li>
-            <li class="govuk-breadcrumbs__list-item" aria-current="false">
-                <a class="govuk-breadcrumbs__link" aria-current="false" href="https://www.gov.uk/education">Education, training and skills</a>
-            </li>
-            <li class="govuk-breadcrumbs__list-item" aria-current="false">
-                <a class="govuk-breadcrumbs__link" aria-current="false" href="https://www.gov.uk/education/further-and-higher-education-skills-and-vocational-training">Further and higher education, skills and vocational training</a>
-            </li>
-            <li class="govuk-breadcrumbs__list-item" aria-current="false">
-                <a class="govuk-breadcrumbs__link" aria-current="false" href="https://www.gov.uk/education/further-education-funding">Further education funding</a>
-            </li>
-            <li class="govuk-breadcrumbs__list-item" aria-current="false">
-                <a class="govuk-breadcrumbs__link" aria-current="false" href="https://www.gov.uk/education/apprenticeships-funding">Apprenticeships funding</a>
-            </li>
-            <li class="govuk-breadcrumbs__list-item" aria-current="false">
-                <a class="govuk-breadcrumbs__link" aria-current="false" href="rules-list">Apprenticeship funding and performance management rules, August 2018 to July 2019</a>
-            </li>
-        </ol>
+
+
+    <div class="gem-c-contextual-breadcrumbs" style="margin-top:-20px">
+        <div class="gem-c-breadcrumbs govuk-breadcrumbs" >
+            <ol class="govuk-breadcrumbs__list">
+                <li class="govuk-breadcrumbs__list-item" aria-current="false">
+                    <a class="govuk-breadcrumbs__link" aria-current="false" href="https://www.gov.uk">Home</a>
+                </li>
+                <li class="govuk-breadcrumbs__list-item" aria-current="false">
+                    <a class="govuk-breadcrumbs__link" aria-current="false" href="https://www.gov.uk/education">Education, training and skills</a>
+                </li>
+                <li class="govuk-breadcrumbs__list-item" aria-current="false">
+                    <a class="govuk-breadcrumbs__link" aria-current="false" href="https://www.gov.uk/education/further-and-higher-education-skills-and-vocational-training">Further and higher education, skills and vocational training</a>
+                </li>
+                <li class="govuk-breadcrumbs__list-item" aria-current="false">
+                    <a class="govuk-breadcrumbs__link" aria-current="false" href="https://www.gov.uk/education/further-education-funding">Further education funding</a>
+                </li>
+                <li class="govuk-breadcrumbs__list-item" aria-current="false">
+                    <a class="govuk-breadcrumbs__link" aria-current="false" href="https://www.gov.uk/education/apprenticeships-funding">Apprenticeships funding</a>
+                </li>
+                <li class="govuk-breadcrumbs__list-item" aria-current="false">
+                    <a class="govuk-breadcrumbs__link" aria-current="false" href="rules-years">Apprenticeship funding rules</a>
+                </li>
+            </ol>
+        </div>
     </div>
-</div>
 <header aria-labelledby="manual-title" class="">
     <div class="primary">
         <!-- for h1 -->
