--- a/app/views/includes/manual-header.html
+++ b/app/views/includes/manual-header.html
@@ -1,5 +1,14 @@
 {% set _manualHeaderTitle = _manualHeaderTitle or "Manual title" %}
-<div class="gem-c-contextual-breadcrumbs" style="margin-top:-20px">
+<div class="full-page-width-wrapper" style="margin-top:-30px">     
+    <div class="gem-c-phase-banner govuk-phase-banner">
+        <p class="govuk-phase-banner__content">
+            <strong class="govuk-tag govuk-phase-banner__content__tag">beta</strong>
+            <span class="govuk-phase-banner__text">Complete our quick 5-question survey to <a target="_blank" href="#">help us improve our content</a>.
+            </span>
+        </p>
+    </div>
+</div>
+<div class="gem-c-contextual-breadcrumbs" >
     <div class="gem-c-breadcrumbs govuk-breadcrumbs" >
         <ol class="govuk-breadcrumbs__list">
             <li class="govuk-breadcrumbs__list-item" aria-current="false">
@@ -18,7 +27,7 @@
                 <a class="govuk-breadcrumbs__link" aria-current="false" href="https://www.gov.uk/education/apprenticeships-funding">Apprenticeships funding</a>
             </li>
             <li class="govuk-breadcrumbs__list-item" aria-current="false">
-                <a class="govuk-breadcrumbs__link" aria-current="false" href="rules-list">Apprenticeship funding and performance management rules, August 2018 to July 2019</a>
+                <a class="govuk-breadcrumbs__link" aria-current="false" href="rules-years">Apprenticeship funding rules</a>
             </li>
         </ol>
     </div>
